<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/input_name_dialog_background"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/inputDialogTitle"
        android:textSize="@dimen/imput_dialog_header_text_size"
        android:singleLine="false"
        android:layout_marginTop="@dimen/imput_dialog_margin_top" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:background="@color/button_normal_color_end"
        android:layout_height="@dimen/imput_dialog_line_size"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_dialog_message"
        android:id="@+id/inputDialogMessage"
        android:textSize="@dimen/imput_dialog_text_size"
        android:layout_marginTop="@dimen/imput_dialog_margin_top" />

    <EditText
        android:layout_width="match_parent"
        android:maxLength="17"
        android:layout_height="wrap_content"
        android:id="@+id/inputDialogEditText"
        android:textSize="@dimen/input_dialog_input_text_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/imput_dialog_margin_top"
        android:layout_marginBottom="@dimen/imput_dialog_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="0.2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_exit"
            android:id="@+id/inputDialogExit"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            style="@style/ButtonTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:id="@+id/inputDialogOk"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            style="@style/ButtonTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="0.2" />
    </LinearLayout>

</LinearLayout>