<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/select_user_dialog"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_user"
        android:id="@+id/selectDialogTitle"
        android:textSize="@dimen/imput_dialog_header_text_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/imput_dialog_line_size"
        android:background="@color/button_normal_color_end"></LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectUserList" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/imput_dialog_line_size"
        android:background="@color/button_normal_color_end"
        android:layout_marginBottom="10dp"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectDialogExit"
            android:text="@string/act_exit"
            android:layout_weight="1"
            style="@style/ButtonTheme"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectDialogAdd"
            android:text="@string/add_new_user"
            android:layout_weight="1"
            style="@style/ButtonTheme"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>
</LinearLayout>